syntax = "proto3";

package com.shoalter.message;

option java_multiple_files = true;

service MessageService {
  rpc sendMessage(SendMessageRequest) returns (SendMessageReply);
}


message SendMessageRequest {
  string chatroomID = 1;
  string userID = 2;
  string content = 3;
}

message SendMessageReply {
  Message message = 1;
}

message Message {
  string id = 1;
  string chatroomID = 2;
  string userID = 3;
  string content = 4;
  int64 createTime = 5;
}