syntax = "proto3";

package com.shoalter.push;

option java_multiple_files = true;

service PushService {
  rpc joinChatRoomStream(ChatRoomStreamRequest) returns (stream ChatRoomStreamReply);
  rpc closeChatRoom(CloseChatRoomRequest) returns (CloseChatRoomReply);
  rpc unsubscribeStream(UnsubscribeStreamRequest) returns (UnsubscribeStreamReply);
}

message PushMessage {
  string id = 1;
  string chatroomID = 2;
  string userID = 3;
  string content = 4;
  int64 createTime = 5;
}


message ChatRoomStreamRequest {
  string chatroomID = 1;
  string userID = 2;
}

message ChatRoomStreamReply {
  PushMessage message = 1;
}


message Success {
  bool isSuccess = 1;
}


message CloseChatRoomRequest {
  string chatroomID = 2;
}

message CloseChatRoomReply {
  Success success = 1;
}


message UnsubscribeStreamRequest {
  string userID = 1;
  string chatroomID = 2;
}

message UnsubscribeStreamReply {
  Success success = 1;
}